fixed transparent background behind power switch

--- a/xpi/popup.css
+++ b/xpi/popup.css
@@ -37,6 +37,7 @@ body{
     position: sticky;
     top: 0px;
     z-index: 10;
+    background: var(--color-selected-background);
 }
 
 /* Style tab links */
